second attempt to fix image stretch bug

--- a/styles/_desktop.scss
+++ b/styles/_desktop.scss
@@ -6,9 +6,7 @@
     background-position: 95% 0%;
 
     & #banner-img-div {
-      padding: 50px 0 0 50px;
-      display: flex;
-      justify-content: start;
+      padding: 50px 0 0 0;
 
       & #banner-img {
         max-width: 450px;
