--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -64,8 +64,6 @@
 
     & #banner-img-div {
       padding: 60px 0 0 0;
-      display: flex;
-      justify-content: start;
 
       & #banner-img {
         max-width: 200px;
