--- a/styles/_tablet.scss
+++ b/styles/_tablet.scss
@@ -7,8 +7,6 @@
 
     & #banner-img-div {
       padding: 70px 0 0 0;
-      display: flex;
-      justify-content: start;
 
       & #banner-img {
         max-width: 350px;
