--- a/styles/style.scss
+++ b/styles/style.scss
@@ -46,7 +46,7 @@ nav {
     & .logo {
       display: inline;
       margin-right: auto;
-      max-width: 80px;
+      max-width: 60px;
     }
   }
 
